tests/baselines/reference/YieldExpression2_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression2_es6.ts(1,1): error TS1163: 'yield' expression must be contained_within a generator declaration.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression2_es6.ts (1 errors) ====
    yield foo;
    ~~~~~
!!! error TS1163: 'yield' expression must be contained_within a generator declaration.